# clipx-reader

./: .gitignore  Cargo.toml  README.org  build.rs  monitor.proto  requirements.txt  setup.py
client/: client.py
scripts/: plot_data.py
src/: clipx.rs  main.rs  monitor.rs  types.rs
