[package]
name = "clipx-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
csv = "1.3.0"
env_logger = "0.11.5"
ethercrab = { path = "../../3rd/ethercrab" }
ethercrab-wire = { path = "../../3rd/ethercrab/ethercrab-wire" }
ethercrab-wire-derive = { path = "../../3rd/ethercrab/ethercrab-wire-derive" }
heapless = "0.8.0"
log = "0.4.22"
prost = "0.13.1"
signal-hook = "0.3.17"
tokio = { version = "1.39.2", features = ["rt", "macros", "rt-multi-thread", "time"] }

[build-dependencies]
prost-build = "0.13.1"
